# flet-secure-storage

./: README.md  pyproject.toml
docs/: README.ru.md
src/flet_secure_storage/: __init__.py  enums.py  options.py  secure_storage.py
src/flutter/flet_secure_storage/: pubspec.yaml
src/flutter/flet_secure_storage/lib/src/: extension.dart  secure_storage.dart
