[project]
name = "flet-secure-storage"
version = "0.1.0"
description = "FletSecureStorage control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Flet contributors", email = "you@example.com" }]
dependencies = [
    "flet>=0.80.1",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-secure-storage"
Repository = "https://github.com/MyGithubAccount/flet-secure-storage"
Issues = "https://github.com/MyGithubAccount/flet-secure-storage/issues"

[tool.setuptools.package-data]
"flutter.flet_secure_storage" = ["**/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
